--- a/backend/package.json
+++ b/backend/package.json
@@ -11,24 +11,52 @@
     "start:contacts": "cd contacts-service && npm run start:dev",
     "start:transactions": "cd transactions-service && npm run start:dev",
     "start:logistics": "cd logistics-service && npm run start:dev",
+    "start:notifications": "cd notifications-service && npm run start:dev",
     "start:recommandations": "cd ai-recommendation-service && npm run start:dev",
     "start:marketplace": "cd marketplace-service && npm run start:dev",
     "start:payments": "cd payments-service && npm run start:dev",
     "start:suppliers": "cd suppliers-service && npm run start:dev",
-    "start:notifications": "cd notifications-service && npm run start:dev",
-    "start:all": "concurrently \"npm run start:admin\" \"npm run start:auth\" \"npm run start:users\" \"npm run start:products\" \"npm run start:contacts\" \"npm run start:transactions\" \"npm run start:logistics\" \"npm run start:notifications\""
+    "start:douane": "cd douane-service && npm run start:dev",
+    "start:evaluations": "cd evaluations-service && npm run start:dev",
+    "start:all": "concurrently \"npm run start:admin\" \"npm run start:auth\" \"npm run start:users\" \"npm run start:products\" \"npm run start:contacts\" \"npm run start:transactions\" \"npm run start:logistics\" \"npm run start:notifications\" \"npm run start:ai-recommandations\" \"npm run start:marketplace\" \"npm run start:payments\" \"npm run start:suppliers\" \"npm run start:douane\" \"npm run start:evaluations\"\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@nestjs/cli": "^11.0.7",
+    "@nestjs/schematics": "^11.0.5",
+    "@nestjs/testing": "^11.1.1",
     "@types/axios": "^0.9.36",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.13.14",
+    "@types/nodemailer": "^6.4.17",
+    "@types/passport-jwt": "^4.0.1",
     "concurrently": "^9.1.2",
+    "prisma": "^6.8.0",
     "ts-node": "^10.9.2"
   },
   "dependencies": {
-    "@nestjs/axios": "^4.0.0"
+    "@nestjs-modules/mailer": "^2.0.2",
+    "@nestjs/axios": "^4.0.0",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/mapped-types": "^2.1.0",
+    "@nestjs/passport": "^11.0.5",
+    "@nestjs/platform-express": "^11.1.1",
+    "@nestjs/serve-static": "^5.0.3",
+    "axios": "^1.9.0",
+    "bcryptjs": "^3.0.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
+    "dotenv": "^16.5.0",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.2",
+    "nodemailer": "^7.0.3",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1"
   }
 }
